--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/estilo.css">
+    <link rel="stylesheet" href="./styles/estilo.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <div class="jugar">Sin ir más lejos que el juego empiece!!</div>
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
